--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <hr/>
 
-<h2><a href="./4.3 HTML Porfolio Project/public/birthday-invite.html"> Birthday Invite</a> </h2>
+<h2><a href="./public/birthday-invite.html"> Birthday Invite</a> </h2>
 <img src ="./assets/images/Birthday-Invite-Nikko.png" alt = "birthday invite" height="200">
 
 <h2><a href="./public/movie-ranking.html"> Nikko's Top Movie Website</a> </h2>
