--- a/public/about.html
+++ b/public/about.html
@@ -2,6 +2,6 @@
 <h1>About Me</h1>
 <p>Traditionally a Finance Major, I'm a young student eager to learn more about the world of software engineering</p>
 
-<p>I currently have 2 years of experience as a Data Analyst, and I have been coding in SQL and actively working with out backend engineering team constantly.</p>
+<p>I currently have 2 years of experience as a Data Analyst, and I have been coding in SQL and actively working with our backend engineering team.</p>
 
 <p>This may be a bit simple for a website, but I'm hoping to improve as quickly as possible.</p>
